--- a/charts/mem0/templates/deployment.yaml
+++ b/charts/mem0/templates/deployment.yaml
@@ -8,6 +8,8 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       {{- include "mem0.selectorLabels" . | nindent 6 }}
@@ -29,7 +31,7 @@ spec:
       serviceAccountName: {{ include "mem0.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if or .Values.initContainers.waitForPostgresql.enabled .Values.initContainers.waitForNeo4j.enabled }}
+      {{- if or .Values.initContainers.waitForPostgresql.enabled .Values.initContainers.waitForNeo4j.enabled .Values.persistence.enabled }}
       initContainers:
         {{- if .Values.initContainers.waitForPostgresql.enabled }}
         - name: wait-for-postgresql
@@ -71,6 +73,48 @@ spec:
                   name: {{ include "mem0.neo4j.secretName" . }}
                   key: {{ include "mem0.neo4j.passwordKey" . }}
         {{- end }}
+        {{- if .Values.persistence.enabled }}
+        - name: setup-data-dir
+          image: busybox:1.36
+          imagePullPolicy: IfNotPresent
+          command:
+            - sh
+            - -c
+            - |
+              echo "Setting up data directory structure..."
+
+              # Create base directories
+              mkdir -p /app/data/mem0
+              mkdir -p /app/data/history
+
+              # Create any additional directories that might be needed
+              # Extract directory from HISTORY_DB_PATH and MEM0_DIR env vars
+              HISTORY_DIR=$(dirname "${HISTORY_DB_PATH:-/app/data/history/history.db}")
+              MEM0_DIR="${MEM0_DIR:-/app/data/mem0}"
+
+              echo "Creating directory: $HISTORY_DIR"
+              mkdir -p "$HISTORY_DIR"
+
+              echo "Creating directory: $MEM0_DIR"
+              mkdir -p "$MEM0_DIR"
+
+              # Set ownership and permissions
+              chown -R 1000:1000 /app/data
+              chmod -R 755 /app/data
+
+              echo "Data directory setup complete"
+              echo "Created directories:"
+              find /app/data -type d | sort
+          envFrom:
+            - configMapRef:
+                name: {{ include "mem0.fullname" . }}-config
+          volumeMounts:
+            - name: data-storage
+              mountPath: /app/data
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+        {{- end }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
@@ -99,14 +143,14 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.persistence.enabled }}
           volumeMounts:
-            - name: history-storage
-              mountPath: /app/history
+            - name: data-storage
+              mountPath: /app/data
           {{- end }}
       {{- if .Values.persistence.enabled }}
       volumes:
-        - name: history-storage
+        - name: data-storage
           persistentVolumeClaim:
-            claimName: {{ include "mem0.fullname" . }}-history-pvc
+            claimName: {{ include "mem0.fullname" . }}-data-pvc
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
