--- a/charts/mem0/templates/pvc.yaml
+++ b/charts/mem0/templates/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "mem0.fullname" . }}-history-pvc
+  name: {{ include "mem0.fullname" . }}-data-pvc
   labels:
     {{- include "mem0.labels" . | nindent 4 }}
   {{- with .Values.persistence.annotations }}
